@@ -1,3 +1,5 @@
+- Refactor: Migration of bibliographic references from value types to domain entities [#qubIT-Fenix-1595]
+
 2.24.1 (17-07-2024)
 - Improvement: Setup qualification filling for Raides on post login [#qubIT-Fenix-5522]
 
